--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-number-format": "^4.4.4",
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.2",
     "web-vitals": "^0.2.4"
